--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,11 @@
       <version>1.18.16</version>
       <scope>provided</scope>
     </dependency>
-
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.4</version>
+    </dependency>
   </dependencies>
 
   <build>
